--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "body-parser": "^1.18.3",
         "express": "^4.16.3",
         "mongoose": "^5.3.2"
+    },
+    "engines": {
+        "node": "10.12.0"
     }
 }
